fix(menu): reduce space on navbar when condensed menu is visible, leaving more space on small screen sizes

--- a/css/style.css
+++ b/css/style.css
@@ -984,6 +984,7 @@ iframe, object, embed {
 @media (max-width: 480px) {
   .navbar-inner {
     padding: 0;
+    min-height: 50px;
   }
 
   .navbar-inner a:nth-of-type(2) {
@@ -992,6 +993,7 @@ iframe, object, embed {
 
   .nav-condensed-menu {
     display: block;
+    margin-top: 9px;
   }
 
   .navigation {
